# spectrumal-frontend/app/api/models/DeleteLobbyRequest.ts
@@ -1,0 +1,65 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenAPI
+ * OpenAPI
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface DeleteLobbyRequest
+ */
+export interface DeleteLobbyRequest {
+    /**
+     * 
+     * @type {string}
+     * @memberof DeleteLobbyRequest
+     */
+    lobbyId?: string;
+}
+
+/**
+ * Check if a given object implements the DeleteLobbyRequest interface.
+ */
+export function instanceOfDeleteLobbyRequest(value: object): value is DeleteLobbyRequest {
+    return true;
+}
+
+export function DeleteLobbyRequestFromJSON(json: any): DeleteLobbyRequest {
+    return DeleteLobbyRequestFromJSONTyped(json, false);
+}
+
+export function DeleteLobbyRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): DeleteLobbyRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'lobbyId': json['lobbyId'] == null ? undefined : json['lobbyId'],
+    };
+}
+
+export function DeleteLobbyRequestToJSON(json: any): DeleteLobbyRequest {
+    return DeleteLobbyRequestToJSONTyped(json, false);
+}
+
+export function DeleteLobbyRequestToJSONTyped(value?: DeleteLobbyRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'lobbyId': value['lobbyId'],
+    };
+}
+
