# spectrumal-frontend/app/api/models/LeaveLobbyRequest.ts
@@ -1,0 +1,73 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenAPI
+ * OpenAPI
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface LeaveLobbyRequest
+ */
+export interface LeaveLobbyRequest {
+    /**
+     * 
+     * @type {string}
+     * @memberof LeaveLobbyRequest
+     */
+    userId?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof LeaveLobbyRequest
+     */
+    lobbyId?: string;
+}
+
+/**
+ * Check if a given object implements the LeaveLobbyRequest interface.
+ */
+export function instanceOfLeaveLobbyRequest(value: object): value is LeaveLobbyRequest {
+    return true;
+}
+
+export function LeaveLobbyRequestFromJSON(json: any): LeaveLobbyRequest {
+    return LeaveLobbyRequestFromJSONTyped(json, false);
+}
+
+export function LeaveLobbyRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): LeaveLobbyRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'userId': json['userId'] == null ? undefined : json['userId'],
+        'lobbyId': json['lobbyId'] == null ? undefined : json['lobbyId'],
+    };
+}
+
+export function LeaveLobbyRequestToJSON(json: any): LeaveLobbyRequest {
+    return LeaveLobbyRequestToJSONTyped(json, false);
+}
+
+export function LeaveLobbyRequestToJSONTyped(value?: LeaveLobbyRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'userId': value['userId'],
+        'lobbyId': value['lobbyId'],
+    };
+}
+
