# spectrumal-frontend/app/api/models/UserColor.ts
@@ -1,0 +1,121 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenAPI
+ * OpenAPI
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { UserColorColorSpace } from './UserColorColorSpace';
+import {
+    UserColorColorSpaceFromJSON,
+    UserColorColorSpaceFromJSONTyped,
+    UserColorColorSpaceToJSON,
+    UserColorColorSpaceToJSONTyped,
+} from './UserColorColorSpace';
+
+/**
+ * 
+ * @export
+ * @interface UserColor
+ */
+export interface UserColor {
+    /**
+     * 
+     * @type {number}
+     * @memberof UserColor
+     */
+    red?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof UserColor
+     */
+    green?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof UserColor
+     */
+    blue?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof UserColor
+     */
+    alpha?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof UserColor
+     */
+    rgb?: number;
+    /**
+     * 
+     * @type {UserColorColorSpace}
+     * @memberof UserColor
+     */
+    colorSpace?: UserColorColorSpace;
+    /**
+     * 
+     * @type {number}
+     * @memberof UserColor
+     */
+    transparency?: number;
+}
+
+/**
+ * Check if a given object implements the UserColor interface.
+ */
+export function instanceOfUserColor(value: object): value is UserColor {
+    return true;
+}
+
+export function UserColorFromJSON(json: any): UserColor {
+    return UserColorFromJSONTyped(json, false);
+}
+
+export function UserColorFromJSONTyped(json: any, ignoreDiscriminator: boolean): UserColor {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'red': json['red'] == null ? undefined : json['red'],
+        'green': json['green'] == null ? undefined : json['green'],
+        'blue': json['blue'] == null ? undefined : json['blue'],
+        'alpha': json['alpha'] == null ? undefined : json['alpha'],
+        'rgb': json['rgb'] == null ? undefined : json['rgb'],
+        'colorSpace': json['colorSpace'] == null ? undefined : UserColorColorSpaceFromJSON(json['colorSpace']),
+        'transparency': json['transparency'] == null ? undefined : json['transparency'],
+    };
+}
+
+export function UserColorToJSON(json: any): UserColor {
+    return UserColorToJSONTyped(json, false);
+}
+
+export function UserColorToJSONTyped(value?: UserColor | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'red': value['red'],
+        'green': value['green'],
+        'blue': value['blue'],
+        'alpha': value['alpha'],
+        'rgb': value['rgb'],
+        'colorSpace': UserColorColorSpaceToJSON(value['colorSpace']),
+        'transparency': value['transparency'],
+    };
+}
+
