# spectrumal-frontend/app/api/models/UserColorColorSpace.ts
@@ -1,0 +1,81 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenAPI
+ * OpenAPI
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface UserColorColorSpace
+ */
+export interface UserColorColorSpace {
+    /**
+     * 
+     * @type {number}
+     * @memberof UserColorColorSpace
+     */
+    type?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof UserColorColorSpace
+     */
+    numComponents?: number;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof UserColorColorSpace
+     */
+    csSRGB?: boolean;
+}
+
+/**
+ * Check if a given object implements the UserColorColorSpace interface.
+ */
+export function instanceOfUserColorColorSpace(value: object): value is UserColorColorSpace {
+    return true;
+}
+
+export function UserColorColorSpaceFromJSON(json: any): UserColorColorSpace {
+    return UserColorColorSpaceFromJSONTyped(json, false);
+}
+
+export function UserColorColorSpaceFromJSONTyped(json: any, ignoreDiscriminator: boolean): UserColorColorSpace {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'type': json['type'] == null ? undefined : json['type'],
+        'numComponents': json['numComponents'] == null ? undefined : json['numComponents'],
+        'csSRGB': json['cs_sRGB'] == null ? undefined : json['cs_sRGB'],
+    };
+}
+
+export function UserColorColorSpaceToJSON(json: any): UserColorColorSpace {
+    return UserColorColorSpaceToJSONTyped(json, false);
+}
+
+export function UserColorColorSpaceToJSONTyped(value?: UserColorColorSpace | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'type': value['type'],
+        'numComponents': value['numComponents'],
+        'cs_sRGB': value['csSRGB'],
+    };
+}
+
