# spectrumal-frontend/app/api/models/index.ts
@@ -3,9 +3,11 @@
 export * from './CreateGameResponse';
 export * from './CreateLobbyRequest';
 export * from './CreateLobbyResponse';
+export * from './DeleteLobbyRequest';
 export * from './Dimension';
 export * from './JoinLobbyRequest';
 export * from './JoinLobbyResponse';
+export * from './LeaveLobbyRequest';
 export * from './Point';
 export * from './PointGuessRequest';
 export * from './PointGuessResponse';
@@ -15,6 +17,8 @@ export * from './Score';
 export * from './ScoreResponse';
 export * from './Spectrum';
 export * from './User';
+export * from './UserColor';
+export * from './UserColorColorSpace';
 export * from './WordGuess';
 export * from './WordGuessRequest';
 export * from './WordGuessResponse';
